test/tests/stages/14_pointers/valid/function_calls/return_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_pointer
        List[1]: 
          TIdentifier: in
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: in
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Int: 
          Pointer: 
            Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[7]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x_ptr
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: return_pointer
                      List[1]: 
                        CAddrOf: 
                          CVar: 
                            TIdentifier: x
                            None: 
                          None: 
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CDereference: 
                    CVar: 
                      TIdentifier: x_ptr
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 100
                    None: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CDereference: 
                    CVar: 
                      TIdentifier: x_ptr
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 100
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 2
                    None: 
                None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: x_ptr
                    None: 
                  CAddrOf: 
                    CVar: 
                      TIdentifier: x
                      None: 
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
